--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,28 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.pagination{
+  padding: 0 150px;
+  width: 100%;
+  text-align: center;
+}
+.title {
+  line-height: "1.5em";
+  overflow: "hidden";
 
+  padding: "10px 0px";
+  font-size: "18px";
+  font-weight: 600;
+},
+.container{
+  margin-top: "0px";
+  margin: "10px";
+  width: "20rem";
+  border: "1px solid #efefef";
+  box-shadow: "0px 0px 20px rgba(0,0,0,0.05)";
+  padding: "20px";
+  border-radius: "5px";
+},
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
